@@ -9,9 +9,8 @@
  *******************************************************************************/
 package io.openliberty.mcp.internal;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.NoSuchElementException;
 
@@ -51,7 +50,7 @@ public enum RequestMethod {
     public static RequestMethod getForMethodName(String methodName) throws NoSuchElementException {
         RequestMethod result = METHODS_BY_NAME.get(methodName);
         if (result == null) {
-            throw new JSONRPCException(JSONRPCErrorCode.METHOD_NOT_FOUND, new ArrayList<>(Arrays.asList(String.valueOf(methodName + " not found"))));
+            throw new JSONRPCException(JSONRPCErrorCode.METHOD_NOT_FOUND, List.of(methodName + " not found"));
         }
         return result;
     }
