@@ -12,6 +12,7 @@ package io.openliberty.mcp.internal.requests;
 import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 import io.openliberty.mcp.internal.ToolMetadata;
 import io.openliberty.mcp.internal.ToolMetadata.ArgumentMetadata;
@@ -54,7 +55,7 @@ public class McpToolCallParams {
 
     public Object[] getArguments(Jsonb jsonb) {
         if (this.arguments == null) {
-            throw new JSONRPCException(JSONRPCErrorCode.INVALID_PARAMS, new ArrayList<>(Arrays.asList("Missing arguments in params")));
+            throw new JSONRPCException(JSONRPCErrorCode.INVALID_PARAMS, List.of("Missing arguments in params"));
         }
         if (parsedArguments == null) {
             parsedArguments = parseArguments(arguments, jsonb);
